--- a/main/templates/main/header.html
+++ b/main/templates/main/header.html
@@ -21,9 +21,9 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html">Login</a>
+            <a class="nav-link" href="/login">Login</a>
           </li><li class="nav-item">
-            <a class="nav-link" href="register.html">Sign Up</a>
+            <a class="nav-link" href="/register">Sign Up</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -37,5 +37,6 @@
   <br>
   {% block content %}
   {% endblock %}
+  <br>
 </body>
 </html>
