--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <h2>Top reviews</h2>
-  <div class="container row justify-content-center">
+  <div class="container row justify-content-between">
     {% for r in object_list %}
       {% if forloop.counter < 4 %}
       <div class="card" style="width: 18rem;">
@@ -20,4 +20,27 @@
     {% endfor %}
   </div>
 </div>
+<br><br>
+
+<div class="container w-25 col align-content-center">
+  <h2>Latest reviews</h2>
+   {% for r in object_list %}
+    {% if forloop.counter < 7 %}
+    <div class="card" style="width: 18rem;">
+    <div class="card-body col">
+      <div class="row">
+        <h6 class="card-title col">{{r.title}}</h6>
+        <h6 class="card-title col mb-2">by {{r.publisher}}</h6>
+      </div>
+        <small class="card-subtitle row mb-2">{{r.date}}</small>
+        <div class="row">
+          <h6 class="card-subtitle col mb-2">Score: {{r.score}}</h6>
+        </div>
+      </div>
+    </div>
+    <br>
+    {% endif %}
+  {% endfor %}
+</div>
+
 {% endblock %}
