--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,16 +7,16 @@
         <br>
         <form method="POST">
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Register</legend>
+                <legend class="border-bottom mb-4">Login</legend>
                 {% csrf_token %}
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
             <hr>
-            <p>If you already have an acoount <a href="{% url 'login' %}"> <strong>login</strong></a> instead.</p>
         </form>
+        <p>If you need an acoount, you can <a href="{% url 'register' %}"><strong>Sign up</strong></a> now.</p>
     </div>
 
 {% endblock %}
