--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,12 +6,18 @@
   <h2>Top reviews</h2>
     {% for r in top_reviews %}
       {% if forloop.counter < 4 %}
-         {{r.title}}
-          ext-muted">By {{r.publisher}}
-          ext-muted">{{r.date|date:"F d, Y"}}
-          Score: {{r.score}}
-          {{r.content}}
-          {{r.rating}}
+        <article class="media content-section">
+          <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" alt="">
+          <div class="media-body">
+            <div class="article-metadata">
+              <a class="mr-2" href="#">By {{r.publisher}}</a>
+              <small class="text-muted">{{r.date|date:"F d, Y"}}</small>
+            </div>
+            <h2><a class="article-title" href="#">{{r.title}}</a></h2>
+            <p class="article-content">{{r.content}}</p>
+            <p class="article-content">Review rating: {{r.rating}}</p>
+          </div>
+        </article>
       {% endif %}
     {% endfor %}
 </div>
@@ -19,13 +25,21 @@
 
 <div class="container">
   <h2>Latest reviews</h2>
+
   {% for r in latest_reviews %}
    {% if forloop.counter < 7 %}
-       {{r.title}}
-       by {{r.publisher}}
-       {{r.date|date:"F d, Y"}}
-         Score: {{r.score}}
-   <br>
+       <article class="media content-section">
+        <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" alt="">
+          <div class="media-body">
+            <div class="article-metadata">
+              <a class="mr-2" href="#">By {{r.publisher}}</a>
+              <small class="text-muted">{{r.date|date:"F d, Y"}}</small>
+            </div>
+            <h2><a class="article-title" href="#">{{r.title}}</a></h2>
+            <p class="article-content">{{r.content}}</p>
+            <p class="article-content">Review rating: {{r.rating}}</p>
+          </div>
+        </article>
    {% endif %}
  {% endfor %}
 </div>
