--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -31,6 +31,7 @@
           {% if user.is_authenticated %}
             <a class="nav-link" href="{% url 'profile' %}">Profile</a>
             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            <a class="nav-link" href="{% url 'review-create' %}">New Review</a>
           {% else %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'login' %}">Login</a>
