--- a/main/templates/main/review_detail.html
+++ b/main/templates/main/review_detail.html
@@ -9,6 +9,12 @@
         <div class="article-metadata">
             <a class="mr-2" href="#">By {{object.publisher}}</a>
             <small class="text-muted">{{object.date|date:"F d, Y"}}</small>
+            {% if object.publisher == user %}
+            <div>
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'review-update' object.id %}">Update</a>
+                <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'review-delete' object.id %}">Delete</a>
+            </div>
+            {% endif %}
         </div>
         <h2 class="article-title">{{object.title}}</h2>
         <p class="article-content">{{object.content}}</p>
