--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -3,17 +3,17 @@
 {% block content %}
 <br>
 <div class="container">
-  <a class="mr-2" href="#">Top reviews</a>
+  <a class="mr-2 btn btn-dark mb-2" href="{% url 'top-reviews' %}">Top reviews</a>
     {% for r in top_reviews %}
       {% if forloop.counter < 4 %}
         <article class="media content-section">
           <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" alt="">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="#">By {{r.publisher}}</a>
+              <a class="mr-2 btn btn-light btn-sm" href="{% url 'user-reviews' r.publisher.username %}">By {{r.publisher}}</a>
               <small class="text-muted">{{r.date|date:"F d, Y"}}</small>
             </div>
-            <h2><a class="article-title" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
+            <h2><a class="btn btn-lg article-title" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
             <p class="article-content">{{r.content}}</p>
             <p class="article-content">Review rating: {{r.rating}}</p>
           </div>
@@ -21,21 +21,21 @@
       {% endif %}
     {% endfor %}
 </div>
-<br><br>
-
+<br>
+<hr>
+<br>
 <div class="container">
-  <a class="mr-2" href="#">Latest reviews</a>
-
+  <a class="mr-2 mb-2 btn btn-dark" href="{% url 'latest-reviews' %}">Latest reviews</a>
   {% for r in latest_reviews %}
-   {% if forloop.counter < 7 %}
+   {% if forloop.counter < 5 %}
        <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" alt="">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="#">By {{r.publisher}}</a>
+              <a class="mr-2 btn btn-light btn-sm" href="{% url 'user-reviews' r.publisher.username %}">By {{r.publisher}}</a>
               <small class="text-muted">{{r.date|date:"F d, Y"}}</small>
             </div>
-            <h2><a class="article-title" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
+            <h2><a class="btn btn-lg article-title" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
             <p class="article-content">{{r.content}}</p>
             <p class="article-content">Review rating: {{r.rating}}</p>
           </div>
