--- a/main/templates/main/user_reviews.html
+++ b/main/templates/main/user_reviews.html
@@ -2,17 +2,18 @@
 
 {% block content %}
 
+<h1 class="mb-3">Reviews by {{ view.kwargs.username }} ({{ page_obj.paginator.count }})</h1>
 <br>
 <div class="container">
-    {% for r in top_reviews %}
+    {% for r in reviews %}
     <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" alt="">
         <div class="media-body">
           <div class="article-metadata">
-            <a class="mr-2 btn btn-light btn-sm" href="{% url 'user-reviews' r.publisher.username %}">By {{r.publisher}}</a>
-            <small class="text-muted">{{r.date|date:"F d, Y"}}</small>
+            <a class="mr-2 btn btn-light" href="{% url 'user-reviews' r.publisher.username %}">By {{ r.publisher }}</a>
+            <small class="text-muted">{{ r.date|date:"F d, Y" }}</small>
           </div>
-          <h2><a class="btn article-title btn-lg" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
+          <h2><a class="btn btn-outline-dark article-title" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
           <p class="article-content">{{r.content}}</p>
           <p class="article-content">Review rating: {{r.rating}}</p>
         </div>
