--- a/main/static/main/main.css
+++ b/main/static/main/main.css
@@ -52,6 +52,7 @@ body {
   .article-img {
     height: 65px;
     width: 65px;
+    object-fit: cover;
     margin-right: 16px;
   }
   
@@ -75,6 +76,7 @@ body {
   .account-img {
     height: 125px;
     width: 125px;
+    object-fit: cover;
     margin-right: 20px;
     margin-bottom: 16px;
   }
