--- a/main/templates/main/top_reviews.html
+++ b/main/templates/main/top_reviews.html
@@ -14,7 +14,7 @@
           </div>
           <h2><a class="btn article-title btn-lg" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
           <p class="article-content">{{r.content}}</p>
-          <p class="article-content">Review rating: {{r.rating}}</p>
+          <p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{r.rating}}</span></p>
         </div>
       </article>
     {% endfor %}
