--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -7,12 +7,11 @@
         <br>
         <form method="POST">
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Review</legend>
-                {% csrf_token %}
+                <legend class="border-bottom mb-4">Reset Password</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info mt-2" type="submit">Submit</button>
+                <button class="btn btn-outline-info mt-3" type="submit">Request Password Reset</button>
             </div>
             <hr>
         </form>
