--- a/main/templates/main/top_reviews.html
+++ b/main/templates/main/top_reviews.html
@@ -11,7 +11,8 @@
           <div class="article-metadata">
             <a class="mr-2 btn btn-light btn-sm" href="{% url 'user-reviews' r.publisher.username %}">By {{r.publisher}}</a>
             <small class="text-muted">{{r.date|date:"F d, Y"}}</small>
-          </div>
+            <small class="text-muted">{{r.category}}</small>
+        </div>
           <h2><a class="btn article-title btn-lg" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
           <p class="article-content">{{r.content}}</p>
           <p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{r.rating}}</span></p>
