--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -34,12 +34,16 @@
 <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
 <br>
 <div class="container">
-  <h3>My reviews</h3>
+  <div class="d-flex justify-content-between mb-2">
+    <h3>My reviews</h3>
+    <a class="btn btn-outline-dark" href="{% url 'review-create' %}">New Review</a>
+  </div>
     {% for r in reviews %}
     <article class="media content-section">
         <div class="media-body">
           <div class="article-metadata">
             <small class="text-muted">{{ r.date|date:"F d, Y" }}</small>
+            <small class="text-muted">{{r.category}}</small>
           </div>
           <h2><a class="btn article-title btn-lg" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
           <p class="article-content">{{r.content}}</p>
