--- a/users/templates/users/profile_settings.html
+++ b/users/templates/users/profile_settings.html
@@ -7,7 +7,7 @@
       <div class="media">
         <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
         <div class="media-body">
-          <h2 class="account-heading">{{ user.username }}</h2>
+          <a class='btn btn-lg account-heading' href="{% url 'profile' %}">{{ user.username }}</a>
           <p class="text-secondary">{{ user.email }}</p>
         </div>
       </div>
