--- a/main/templates/main/review_detail.html
+++ b/main/templates/main/review_detail.html
@@ -21,6 +21,12 @@
         <p class="article-content">{{object.content}}</p>
         <p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{object.rating}}</span></p>
         </div>
+        <br>
+        <hr>
+        <form action="{% url 'like-review' review.pk %}" method="POST">
+            {% csrf_token %}
+            <button class="btn btn-primary btn-sm" type="submit" name="review_id" value="{{review.id}}">Like</button> - {{ total_likes }} likes
+        </form>
     </article>
 </div>
 <br>
