--- a/main/templates/main/user_reviews.html
+++ b/main/templates/main/user_reviews.html
@@ -12,6 +12,7 @@
           <div class="article-metadata">
             <a class="mr-2 btn btn-light" href="{% url 'user-reviews' r.publisher.username %}">By {{ r.publisher }}</a>
             <small class="text-muted">{{ r.date|date:"F d, Y" }}</small>
+            <small class="text-muted">{{r.category}}</small>
           </div>
           <h2><a class="btn article-title btn-lg" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
           <p class="article-content">{{r.content}}</p>
