--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -16,7 +16,7 @@
             </div>
             <hr>
         </form>
-        <p>If you need an acoount, you can <a href="{% url 'register' %}"><strong>Sign up</strong></a> now.</p>
+        <p>If you need an account, you can <a href="{% url 'register' %}"><strong>Sign up</strong></a> now.</p>
     </div>
 
 {% endblock %}
