--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -4,7 +4,7 @@
 
         <br>
         <h2>You have been logged out</h2>        
-        <p>Login again<a href="{% url 'login' %}"> <strong>login</strong></a> instead.</p>
+        <p><a href="{% url 'login' %}">Login</a> again</p>
         </form>
 
 {% endblock %}
