--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -12,7 +12,7 @@
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Login</button>
+                <button class="btn btn-outline-info mt-2" type="submit">Login</button>
             </div>
             <hr>
         </form>
