Added categories page

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -12,7 +12,7 @@
             <div class="article-metadata">
               <a class="mr-2 btn btn-light btn-sm" href="{% url 'user-reviews' r.publisher.username %}">By {{r.publisher}}</a>
               <small class="text-muted">{{r.date|date:"F d, Y"}}</small>
-              <small class="text-muted">{{r.category}}</small>
+              <a class="btn btn-sm mb-1" href="{% url 'category' r.category %}">{{r.category}}</a>
             </div>
             <h2><a class="btn btn-lg article-title" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
             <p class="article-content">{{r.content}}</p>
@@ -35,7 +35,7 @@
             <div class="article-metadata">
               <a class="mr-2 btn btn-light btn-sm" href="{% url 'user-reviews' r.publisher.username %}">By {{r.publisher}}</a>
               <small class="text-muted">{{r.date|date:"F d, Y"}}</small>
-              <small class="text-muted">{{r.category}}</small>
+              <a class="btn btn-sm mb-1" href="#">{{r.category}}</a>
             </div>
             <h2><a class="btn btn-lg article-title" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
             <p class="article-content">{{r.content}}</p>
