--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -12,11 +12,11 @@
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info mt-2" type="submit">Login</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
             <hr>
         </form>
-        <p>If you need an account, you can <a href="{% url 'register' %}"><strong>Sign up</strong></a> now.</p>
+        <p>If you need an acoount, you can <a href="{% url 'register' %}"><strong>Sign up</strong></a> now.</p>
     </div>
 
 {% endblock %}
