--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -2,76 +2,28 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<!--
 
-  <div class="content-section">
-      <div class="media">
-        <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
-        <div class="media-body">
-          <h2 class="account-heading">{{ user.username }}</h2>
-          <p class="text-secondary">{{ user.email }}</p>
-        </div>
+<div class="content-section">
+    <div class="media">
+      <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+      <div class="media-body">
+        <h2 class="account-heading">{{ user.username }}</h2>
+        <p class="text-secondary">{{ user.email }}</p>
       </div>
-      <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Profile info</legend>
-            {{ u_form|crispy }}
-            {{ p_form|crispy }}
-        </fieldset>
-        <div class="form-group">
-            <button class="btn btn-outline-info mt-2" type="submit">Update</button>
-        </div>
-        <hr>
-    </form>
     </div>
--->
-
-<div class="container d-flex justify-content-between mb-3 mt-3">
-  <h1>{{ user.username }}</h1>
-  <h3><a class="btn btn-dark" href="{% url 'profile-settings' %}">Settings</a></h3>
-</div>
-<img class="rounded-circle account-img" src="{{ user.profile.image.url }}" onerror="if (this.src != 'default.jpg') this.src = '../media/default.jpg'">
-<br>
-<div class="container">
-  <div class="d-flex justify-content-between mb-2">
-    <h3>My reviews</h3>
-    <a class="btn btn-outline-dark" href="{% url 'review-create' %}">New Review</a>
+    <form method="POST" enctype="multipart/form-data">
+      {% csrf_token %}
+      <fieldset class="form-group">
+          <legend class="border-bottom mb-4">Profile info</legend>
+          {{ u_form|crispy }}
+          {{ p_form|crispy }}
+      </fieldset>
+      <div class="form-group">
+          <button class="btn btn-outline-info" type="submit">Update</button>
+      </div>
+      <hr>
+      <p>If you already have an acoount <a href="{% url 'login' %}"> <strong>login</strong></a> instead.</p>
+  </form>
   </div>
-    {% for r in reviews %}
-    <article class="media content-section">
-        <div class="media-body">
-          <div class="article-metadata">
-            <small class="text-muted">{{ r.date|date:"F d, Y" }}</small>
-            <small class="text-muted">{{r.category}}</small>
-          </div>
-          <h2><a class="btn article-title btn-lg" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
-          <p class="article-content">{{r.content}}</p>
-          <p class="article-content">Review rating: {{r.rating}}</p>
-        </div>
-      </article>
-    {% endfor %}
-
-    {% if is_paginated %}
-        {% if page_obj.has_previous %}
-            <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
-            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
-        {% endif %}
-
-        {% for num in page_obj.paginator.page_range %}
-            {% if page_obj.number == num %}
-                <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
-            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-            <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
-            {% endif %}
-        {% endfor %}
-
-        {% if page_obj.has_next %}
-            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
-            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
-        {% endif %}
-    {% endif %}
-</div>
-<br>
 
 {% endblock %}
