--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -31,7 +31,7 @@
   <h1>{{ user.username }}</h1>
   <h3><a class="btn btn-dark" href="{% url 'profile-settings' %}">Settings</a></h3>
 </div>
-<img class="rounded-circle account-img" src="{{ user.profile.image.url }}" onerror="if (this.src != 'default.jpg') this.src = '../media/default.jpg'">
+<img class="rounded-circle account-img" src="{{ user.profile.image.url }}" onerror="if (this.src != 'default.png') this.src = '../media/default.png'">
 <br>
 <div class="container">
   <div class="d-flex justify-content-between mb-2">
