--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -27,7 +27,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}">Home</a>
+            <a class="nav-link" href="{% url 'homepage' %}">Home</a>
           </li>
           {% if user.is_authenticated %}
             <a class="nav-link" href="{% url 'profile' %}">Profile</a>
@@ -41,9 +41,10 @@
             </li>
           {% endif %}
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+        <form class="d-flex" method="POST" action="{% url 'search-results' %}">
+          {% csrf_token %}
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"  name="searched">
+          <button class="btn btn-outline-secondary" type="submit">Search</button>
         </form>
       </div>
     </div>
