--- a/main/templates/main/review_detail.html
+++ b/main/templates/main/review_detail.html
@@ -22,23 +22,40 @@
         <p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{review.rating}}</span></p>
         </div>
         <hr>
-        {% if user.is_authenticated %}
+
         <form action="{% url 'like-review' review.pk %}" method="POST">
             {% csrf_token %}
-            <button class="btn btn-primary btn-sm" type="submit" name="review_id" value="{{review.id}}">Like</button> - {{ total_likes }} likes
-        </form>
+        {% if user.is_authenticated %}
+            {% if liked %}
+                <button class="btn btn-danger btn-sm" type="submit" name="review_id" value="{{review.id}}">Unlike</button>
+            {% else %}
+                <button class="btn btn-primary btn-sm" type="submit" name="review_id" value="{{review.id}}">Like</button>
+            {% endif %} 
+        {% else %}
+        <small>Login to like</small>
         {% endif %}
+            - {{ total_likes }} likes
+        </form>
         <br>
         <div class="container">
-            <h2 class="article-title">Comment section</h2>
+            <h2 class="article-title">Comments</h2>
             {% if not review.comments.all %}
                 <p>There are no comments yet</p>
             {% else %}
             {% for comment in review.comments.all %}
-                <hr>
-                <strong>{{ comment.name }}</strong> - <small class="text-muted">{{ comment.date_added }}</small>
-                <br>
-                {{ comment.content }}
+            <div class="card">
+                <div class="card-body">
+                    <strong>{{ comment.name }}</strong> - <small class="text-muted">{{ comment.date_added }}</small>
+                    <br>
+                    {{ comment.content }}
+                    {% if comment.name == user %}
+                        <div>
+                            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'comment-update' object.id %}">Update</a>
+                            <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'comment-delete' object.id %}">Delete</a>
+                        </div>
+                     {% endif %}
+                </div>
+            </div>
             {% endfor %}
             {% endif %}
             <hr>
