--- a/main/templates/main/review_detail.html
+++ b/main/templates/main/review_detail.html
@@ -19,7 +19,7 @@
         </div>
         <h1 class="btn btn-lg article-title"><strong>{{object.title}}</strong></h1>
         <p class="article-content">{{review.content}}</p>
-        <p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{review.rating}}</span></p>
+        <!--<p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{review.rating}}</span></p>-->
         </div>
         <hr>
 
