--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -47,7 +47,7 @@
           </div>
           <h2><a class="btn article-title btn-lg" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
           <p class="article-content">{{r.content}}</p>
-          <p class="article-content">Review rating: {{r.rating}}</p>
+         <!-- <p class="article-content">Review rating: {{r.rating}}</p>-->
         </div>
       </article>
     {% endfor %}
