--- a/main/templates/main/top_reviews.html
+++ b/main/templates/main/top_reviews.html
@@ -6,7 +6,7 @@
 <div class="container">
     {% for r in top_reviews %}
     <article class="media content-section">
-        <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" onerror="if (this.src != 'default.png') this.src = '../media/default.png'">
+        <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" onerror="if (this.src != 'default.png') this.src = '/media/default.png'">
         <div class="media-body">
           <div class="article-metadata">
             <a class="mr-2 btn btn-light btn-sm" href="{% url 'user-reviews' r.publisher.username %}">By {{r.publisher}}</a>
