Default png picture fix

--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,7 +7,7 @@
     {% for r in top_reviews %}
       {% if forloop.counter < 4 %}
         <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" onerror="if (this.src != 'default.png') this.src = 'https://res.cloudinary.com/recommendx-herokuapp-com/image/upload/v1638789851/media/default.png'">
+          <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" onerror="this.src='https://res.cloudinary.com/recommendx-herokuapp-com/image/upload/v1638789851/media/default.png'">
           <div class="media-body">
             <div class="article-metadata">
               <a class="mr-2 btn btn-light btn-sm" href="{% url 'user-reviews' r.publisher.username %}">By {{r.publisher}}</a>
@@ -30,7 +30,7 @@
   {% for r in latest_reviews %}
    {% if forloop.counter < 5 %}
        <article class="media content-section">
-        <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" onerror="if (this.src != 'default.png') this.src = 'https://res.cloudinary.com/recommendx-herokuapp-com/image/upload/v1638789851/media/default.png'">
+        <img class="rounded-circle article-img" src="{{ r.publisher.profile.image.url }}" onerror="this.src='https://res.cloudinary.com/recommendx-herokuapp-com/image/upload/v1638789851/media/default.png'">
           <div class="media-body">
             <div class="article-metadata">
               <a class="mr-2 btn btn-light btn-sm" href="{% url 'user-reviews' r.publisher.username %}">By {{r.publisher}}</a>
