--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -15,8 +15,12 @@
               <a class="btn btn-sm mb-1" href="{% url 'category' r.category|slugify %}">{{r.category}}</a>
             </div>
             <h2><a class="btn btn-lg article-title" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
-            <p class="article-content">{{r.content}}</p>
-            <!--<p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{r.rating}}</span></p>-->
+            <div class="card">
+              {% if r.images.url %}
+                <img class="article-img" src="{{ r.images.url }}" alt="">
+              {% endif %}
+              <p class="article-content mt-2">{{r.content|slice:"100"}}</p>
+          </div>
           </div>
         </article>
       {% endif %}
@@ -38,8 +42,12 @@
               <a class="btn btn-sm mb-1" href="{% url 'category' r.category|slugify %}">{{r.category}}</a>
             </div>
             <h2><a class="btn btn-lg article-title" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
-            <p class="article-content">{{r.content}}</p>
-            <!--<p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{r.rating}}</span></p>-->
+            <div class="card">
+              {% if r.images.url %}
+                <img class="article-img" src="{{ r.images.url }}" alt="">
+              {% endif %}
+              <p class="article-content mt-2">{{r.content|slice:"100"}}</p>
+            </div>
           </div>
         </article>
    {% endif %}
