--- a/main/templates/main/user_reviews.html
+++ b/main/templates/main/user_reviews.html
@@ -15,8 +15,12 @@
             <small class="text-muted">{{r.category}}</small>
           </div>
           <h2><a class="btn article-title btn-lg" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
-          <p class="article-content">{{r.content}}</p>
-         <!-- <p class="article-content">Review rating: {{r.rating}}</p>-->
+          <div class="card">
+            {% if r.images.url %}
+              <img class="article-img" src="{{ r.images.url }}" alt="">
+            {% endif %}
+            <p class="article-content mt-2">{{r.content|slice:"100"}}</p>
+        </div>
         </div>
       </article>
     {% endfor %}
