--- a/main/templates/main/category.html
+++ b/main/templates/main/category.html
@@ -15,8 +15,11 @@
             <small class="text-muted">{{r.date|date:"F d, Y"}}</small>
         </div>
           <h2><a class="btn article-title btn-lg" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
-          <p class="article-content">{{r.content}}</p>
-          <!--<p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{r.rating}}</span></p>-->
+        <div class="card">
+            {% if r.images.url %}
+              <img class="article-img" src="{{ r.images.url }}" alt="">
+            {% endif %}
+            <p class="article-content mt-2">{{r.content|slice:"100"}}</p>
         </div>
       </article>
     {% endfor %}
