--- a/main/templates/main/latest_reviews.html
+++ b/main/templates/main/latest_reviews.html
@@ -14,8 +14,12 @@
               <small class="text-muted">{{r.category}}</small>
             </div>
             <h2><a class="btn article-title btn-lg" href="{% url 'review-detail' r.id %}">{{r.title}}</a></h2>
-            <p class="article-content">{{r.content}}</p>
-           <!-- <p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{r.rating}}</span></p>-->
+            <div class="card">
+              {% if r.images.url %}
+                <img class="article-img" src="{{ r.images.url }}" alt="">
+              {% endif %}
+              <p class="article-content mt-2">{{r.content|slice:"100"}}</p>
+          </div>
           </div>
         </article>
    {% endfor %}
