--- a/main/templates/main/review_detail.html
+++ b/main/templates/main/review_detail.html
@@ -18,8 +18,12 @@
             {% endif %}
         </div>
         <h1 class="btn btn-lg article-title"><strong>{{object.title}}</strong></h1>
-        <p class="article-content">{{review.content}}</p>
-        <!--<p class="article-content">Review rating: <span class="badge rounded-pill bg-dark">{{review.rating}}</span></p>-->
+        <div class="card">
+            {% if r.images.url %}
+              <img class="article-img" src="{{ r.images.url }}" alt="">
+            {% endif %}
+            <p class="article-content mt-2">{{r.content}}</p>
+        </div>
         </div>
         <hr>
 
