--- a/main/templates/main/review_form.html
+++ b/main/templates/main/review_form.html
@@ -5,7 +5,7 @@
 
     <div class="content-section">
         <br>
-        <form method="POST">
+        <form method="POST" enctype="multipart/form-data">
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Review</legend>
                 {% csrf_token %}
