Restricted unauthenticated userd

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -41,11 +41,13 @@
             </li>
           {% endif %}
         </ul>
-        <form class="d-flex" method="POST" action="{% url 'search-results' %}">
-          {% csrf_token %}
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"  name="searched">
-          <button class="btn btn-outline-secondary" type="submit">Search</button>
-        </form>
+        {% if user.is_authenticated %}
+          <form class="d-flex" method="POST" action="{% url 'search-results' %}">
+            {% csrf_token %}
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"  name="searched">
+            <button class="btn btn-outline-secondary" type="submit">Search</button>
+          </form>
+        {% endif %}
       </div>
     </div>
   </nav>
