--- a/main/templates/main/review_detail.html
+++ b/main/templates/main/review_detail.html
@@ -35,12 +35,11 @@
             {% else %}
                 <button class="btn btn-primary btn-sm" type="submit" name="review_id" value="{{review.id}}">Like</button>
             {% endif %} 
-        {% else %}
-        <small>Login to like</small>
         {% endif %}
             - <strong>{{ total_likes }} likes</strong>
         </form>
         <br>
+        {% if user.is_authenticated %}
         <div class="container">
             <h2 class="article-title">Comments</h2>
             {% if not review.comments.all %}
@@ -65,6 +64,9 @@
             <hr>
             <a class="btn btn-lg" href="{% url 'add-comment' review.pk %}"><em>Add comment</em></a>
         </div>
+        {% else %}
+            <a class="btn btn-primary" href="{% url 'login' %}">Login</a> to like and see comments
+        {% endif %}
     </article>
 </div>
 <br>
